<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:layout_margin="10dp"
            android:width="200dp"
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainactivity_button_start"
            android:onClick="onButtonClickStart"/>

        <Button
            android:layout_margin="10dp"
            android:width="200dp"
            android:id="@+id/buttonInstellingen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainactivity_button_instellingen"
            android:onClick="onButtonClickInstellingen"/>

        <Button
            android:layout_margin="10dp"
            android:width="200dp"
            android:id="@+id/buttonAfsluiten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainactivity_button_afsluiten"
            android:onClick="onButtonClickAfsluiten"/>



    </LinearLayout>



</android.support.constraint.ConstraintLayout>