<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.Oefening1Activity"
    tools:showIn="@layout/activity_oefening1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/woord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oefeningen_doelwoord"
                android:textAlignment="center"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/speakerOefening1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/speaker"
                android:contentDescription="@string/oefeningen_speakerContentDescription"
                android:maxWidth="35dp"
                android:maxHeight="35dp"
                android:onClick="onClickDefinitieSpreken"
                android:tag="2" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/afbeelding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="#00000000"
            android:contentDescription="@string/oefeningen_afbeeldingContentDescription"
            android:onClick="volgendeOefening"
            android:scaleType="center" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>